test: suppress sun.misc.Unsafe warning on JDK 23+
Fork tests and pass --sun-misc-unsafe-memory-access=allow, guarded by a
JDK version check so older JDKs (17/21) aren't broken by the unknown flag.